--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/breakfast_burrito.html">Minute Breakfast Burrito</a>
+        <br>
+        <a href="./recipes/shrimp.html">Coconut shrimp</a>
     </body>
 </html>
